# feedback

./: .gitignore  .travis.yml  README.md  io.elementary.feedback.yml  meson.build
.github/workflows/: gettext.yml  main.yml  release.yml
data/: feedback.appdata.xml.in  feedback.desktop.in  feedback.metainfo.xml.in  gschema.xml  meson.build
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+171 more)
po/extra/: POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+170 more)
src/: Application.vala  MainWindow.vala
src/Dialogs/: IssueReporter.vala
src/Widgets/: CategoryRow.vala  RepoRow.vala  TextView.vala
